full-moon/tests/cases/fail/parser/bin-op-2/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/bin-op-2
---
error[ast]: unexpected token `+`. + (expected expression after binary operator)
  ┌─ source.lua:1:10
  │
1 │ return 1 + until
  │          ^

error[ast]: unexpected token `until`. until (unexpected token, this needs to be a statement)
  ┌─ source.lua:1:12
  │
1 │ return 1 + until
  │            ^^^^^


